# LAB-KIT

./: .env.example  Cargo.toml  ChatGPT-Minilab e LogLine (1).md  LICENSE  README.md
benches/composition-lab/: README.md
benches/contract-bench/: README.md
benches/dialogue-observatory/: README.md
benches/ghost-review/: README.md
benches/interval-workbench/: README.md
benches/projector-lab/: README.md
benches/promotion-control/: README.md
benches/receipt-bench/: README.md
benches/runtime-observatory/: README.md
benches/simulation-bench/: README.md
benches/standards-adapter-bench/: README.md
canon/: conformance.refs.yaml  foundation.refs.yaml
clock/schedules/: santo-andre.lab-clock.yaml
docs/: 00-overview.md  01-install.md  02-supabase-spine.md  03-cli.md  04-labd.md  05-manifest.md  06-projectors.md  07-ghosts.md  08-evidence.md  09-receipts.md  10-clock.md  11-hooks.md  12-dispatch-and-hermes.md  13-study-benches.md  14-frontends.md
examples/ai-to-act-translation/: README.md
manifests/: lab.manifest.example.yaml  santo-andre.manifest.example.yaml
profiles/: logline-lab.practice.v0.yaml  santo-andre.practice.v0.yaml
schemas/: dispatch-packet.schema.json  evidence.schema.json  execution-report.schema.json  ghost.schema.json  hermes-workorder.schema.json  lab-manifest.schema.json  logline-act.schema.json  promotion-control.schema.json  receipt-candidate.schema.json  runtime-envelope.schema.json
src/: cli.rs  commands.rs  db.rs  hash.rs  hooks.rs  io.rs  labd.rs  lib.rs  main.rs  model.rs  packets.rs  schema.rs
(+24 files in other folders)
