[package]
name = "logline-lab-kit"
version = "0.1.0"
edition = "2021"
description = "Rust-native LogLine Lab Kit: CLI/labd, Supabase act spine, projectors, ghosts, evidence, receipts, clock, dispatch boundary."
license = "MIT"

[[bin]]
name = "logline-lab"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"
hex = "0.4"
jsonschema = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.10"
